--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <ul>
                         <li>
                             <a href="#">
-                                <img class="logo" src="./pic/logo.png"
+                                <img src="./pic/logo.png" class="logo"
                             /></a>
                         </li>
                         <li>
