--- a/index.html
+++ b/index.html
@@ -90,18 +90,18 @@
                                 <p>skills</p>
                             </button>
                             <button
-                                onclick="javascript:window.open('https://github.com/Himanshi7Bansal', '_blank');"
+                                onclick="javascript:window.open('https://github.com/himanshi78bansal', '_blank');"
                                 class="summary two"
                             >
                                 <p class="digits">12+</p>
                                 <p>projects</p>
                             </button>
                             <button
-                                onclick="javascript:window.open('https://leetcode.com/u/hbnsl78/', '_blank');"
+                                onclick="javascript:window.open('https://leetcode.com/u/himanshi78bansal/', '_blank');"
                                 class="summary three"
                             >
                                 <p class="digits">250+</p>
-                                <p class = "cut">DSA Problems solved</p>
+                                <p class="cut">DSA Problems solved</p>
                             </button>
                         </div>
                     </div>
@@ -401,7 +401,15 @@
                             id="three"
                         />
                     </div>
+                    <div>
+                        <img
+                            src="./project piccs/springboot/spring.jpg"
+                            id="four"
+                        />
+                    </div>
                 </div>
+
+                <!-- <div class="html"> -->
                 <div id="myNav1" class="overlay">
                     <a
                         href="javascript:void(0)"
@@ -413,32 +421,34 @@
                         <div>
                             <div class="curr">
                                 <a
-                                    href="https://himanshi7bansal.github.io/currencyConvertor/"
+                                    href="https://himanshi78bansal.github.io/currencyConvertor/"
+                                    target="_blank"
                                     ><img src="./project piccs/html/curr.jpg"
                                 /></a>
                                 <figcaption>Currency Convertor</figcaption>
                             </div>
                             <div class="bmi">
                                 <a
-                                    href="https://himanshi7bansal.github.io/BMI-Calculator/"
+                                    href="https://himanshi78bansal.github.io/BMI-Calculator/"
+                                    target="_blank"
                                 >
                                     <img src="./project piccs/html/bmi.jpg" />
                                 </a>
                                 <figcaption>BMI Calculator</figcaption>
                             </div>
-                            <div class="drum">
+                            <div class="LoveCalculator">
                                 <a
-                                    href="https://himanshi7bansal.github.io/Drum-Kit/"
+                                    href="https://himanshi78bansal.github.io/love-calculator/"
+                                    target="_blank"
                                 >
-                                    <img src="./project piccs/html/drum.jpg" />
+                                    <img src="./project piccs/html/love.jpg" />
                                 </a>
-                                <figcaption>Drum-Kit</figcaption>
+                                <figcaption>Love Calculator</figcaption>
                             </div>
-                        </div>
-                        <div>
                             <div class="simon">
                                 <a
-                                    href="https://himanshi7bansal.github.io/Drum-Kit/"
+                                    href="https://himanshi78bansal.github.io/Simon-GAme/"
+                                    target="_blank"
                                 >
                                     <img src="./project piccs/html/simon.jpg" />
                                 </a>
@@ -446,21 +456,54 @@
                             </div>
                             <div class="dice">
                                 <a
-                                    href="https://himanshi7bansal.github.io/Dice-Challenge/"
+                                    href="https://himanshi78bansal.github.io/Dice-Challenge/"
+                                    target="_blank"
                                 >
                                     <img src="./project piccs/html/dice.jpg" />
                                 </a>
                                 <figcaption>Dice Game</figcaption>
                             </div>
-                            <div class="website">
+                            <!-- <div class="website">
                                 <a
-                                    href="https://himanshi7bansal.github.io/New-Portfolio/"
+                                    href="https://github.com/himanshi78bansal/project-website"
+                                    target="_blank"
                                 >
                                     <img
                                         src="./project piccs/html/website.jpg"
                                     />
                                 </a>
                                 <figcaption>Website</figcaption>
+                            </div> -->
+                            <div class="myTicTacToe">
+                                <a
+                                    href="https://himanshi78bansal.github.io/myTicTacToe/"
+                                    target="_blank"
+                                >
+                                    <img
+                                        src="./project piccs/html/myTicTacToe.jpg"
+                                    />
+                                </a>
+                                <figcaption>myTicTacToe</figcaption>
+                            </div>
+                            <div class="drum">
+                                <a
+                                    href="https://himanshi78bansal.github.io/Drum-Kit/"
+                                    target="_blank"
+                                >
+                                    <img src="./project piccs/html/drum.jpg" />
+                                </a>
+                                <figcaption>Drum-Kit</figcaption>
+                            </div>
+                            <div class="rockpaperscissor">
+                                <a
+                                    href="https://himanshi78bansal.github.io/RockPaperScissors/"
+                                    target="_blank"
+                                >
+                                    <img
+                                        src="./project piccs/html/rockpaperscissor.jpg"
+                                    />
+                                </a>
+                                <figcaption>Rock Paper Scissor</figcaption>
                             </div>
                         </div>
                     </div>
@@ -518,6 +561,39 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- <div class="SpringBoot"> -->
+                <div id="myNav9" class="overlay">
+                    <a
+                        href="javascript:void(0)"
+                        class="closebtn"
+                        onclick="closeNav()"
+                        >&larr;</a
+                    >
+                    <div class="overlay-content">
+                        <div>
+                            <div class="curr">
+                                <a
+                                    href="https://github.com/himanshi78bansal/BankApp"
+                                    target="_blank"
+                                    ><img
+                                        src="./project piccs/springboot/bankApp.jpg"
+                                /></a>
+                                <figcaption>BankApp</figcaption>
+                            </div>
+
+                            <div class="curr">
+                                <a
+                                    href="https://github.com/himanshi78bansal/WeatherApp"
+                                    target="_blank"
+                                    ><img
+                                        src="./project piccs/springboot/weatherApp.jpg"
+                                /></a>
+                                <figcaption>WeatherApp</figcaption>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <section id="skills">
@@ -554,25 +630,27 @@
                 </div>
                 <div class="contact">
                     <div class="info">
-                        <p>Ph No - +91 7497035925</p>
-                        <p>Mail - hbnsl78@gmail.com</p>
+                        <p>Ph No - +91-7497035925</p>
+                        <p>Mail - himanshi78bansal@gmail.com</p>
                         <p>
                             Linkedin -
                             <a
                                 href="https://www.linkedin.com/in/himanshi-bansal-495196222/"
                             >
-                                Himanshi Bansal</a
+                                himanshi78bansal</a
                             >
                         </p>
                         <p>
                             GitHub -
-                            <a href="https://github.com/Himanshi7Bansal"
-                                >Himanshi7Bansal</a
+                            <a href="https://github.com/himanshi78bansal"
+                                >himanshi78bansal</a
                             >
                         </p>
                         <p>
                             leetCode -
-                            <a href="https://leetcode.com/hbnsl78">hbnsl78</a>
+                            <a href="https://leetcode.com/hbnsl78"
+                                >himanshi78bansal</a
+                            >
                         </p>
                     </div>
                     <div class="map">
