--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 <p>skills</p>
                             </button>
                             <button
-                                onclick="javascript:window.open('https://github.com/himanshi78bansal', '_blank');"
+                                onclick="javascript:window.open('https://github.com/Himanshi78Bansal', '_blank');"
                                 class="summary two"
                             >
                                 <p class="digits">12+</p>
@@ -675,3 +675,4 @@
         <script src="./js/script.js"></script>
     </body>
 </html>
+
